Update test/jdk/valhalla/valuetypes/IsIdentityClassTest.java
Co-authored-by: Roger Riggs <Roger.Riggs@Oracle.com>